Fix logo that didn't recenter on small window size Regression from commit b59428701fb7e6d1c091c464b15fd9e5d9f24bfc

--- a/src/vs/workbench/parts/watermark/browser/watermark.css
+++ b/src/vs/workbench/parts/watermark/browser/watermark.css
@@ -52,7 +52,7 @@
 	.monaco-workbench > .part.editor.empty > .watermark {
 		opacity: 0;
 	}
-	.monaco-workbench .part.editor.empty {
+	.monaco-workbench .part.editor.empty.has-watermark {
 		background-position-y: 50%;
 	}
 }
